--- a/docs/01-getting-started/01-installation.mdx
+++ b/docs/01-getting-started/01-installation.mdx
@@ -1,3 +1,4 @@
+test
 ---
 title: 설치
 description: `create-next-app`을 사용하여 새로운 Next.js 애플리케이션을 생성합니다. Typescript, 스타일을 설정하고 `next.config.js` 파일을 구성합니다.
